k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname-app-service
spec:
  selector:
    app: hostname-app
  ports:
  - port: 5000
    targetPort: 3000
